--- a/css/main.css
+++ b/css/main.css
@@ -50,7 +50,7 @@
     background-image: linear-gradient(to right, rgba(255, 0, 0, 0.219), black, rgba(255, 0, 0, 0.219)); }
     .bodyIndex .sectionM div h1 {
       text-align: center;
-      font-family: 'Anton', sans-serif;
+      font-family: "Anton", sans-serif;
       font-size: 60px;
       color: white;
       text-shadow: 9px 9px rgba(0, 0, 0, 0.87); }
@@ -77,7 +77,7 @@
       font-size: 30px;
       color: white;
       text-shadow: 2px 2px rgba(255, 0, 0, 0.219);
-      font-family: 'Anton', sans-serif;
+      font-family: "Anton", sans-serif;
       margin-top: 30px;
       animation-name: latir;
       animation-iteration-count: infinite;
@@ -95,6 +95,18 @@
       margin-bottom: 1rem; }
   .bodyIndex .sectionR {
     grid-area: redes; }
+    .bodyIndex .sectionR div p {
+      display: flex;
+      flex-direction: column;
+      color: white;
+      text-shadow: 2px 2px rgba(0, 0, 0, 0.87);
+      text-align: center;
+      justify-content: center;
+      font-family: "Anton", sans-serif;
+      font-size: 25px;
+      margin-top: 2rem; }
+      .bodyIndex .sectionR div p span {
+        padding-top: 0.5rem; }
     .bodyIndex .sectionR .redes {
       padding: 5px;
       font-family: 'Bebas Neue', cursive;
@@ -102,7 +114,7 @@
       text-shadow: 3px 3px rgba(0, 0, 0, 0.87);
       display: flex;
       justify-content: center;
-      margin-top: 60px;
+      margin-top: 3rem;
       text-align: center; }
       .bodyIndex .sectionR .redes h3 {
         font-size: 40px;
@@ -135,7 +147,7 @@
     .bodyIndex footer h4 {
       color: white;
       text-shadow: 1px 1px rgba(255, 0, 0, 0.219);
-      font-family: 'Roboto', sans-serif;
+      font-family: "Roboto", sans-serif;
       font-size: 15px;
       margin-right: 5px; }
     .bodyIndex footer a {
@@ -185,8 +197,10 @@
       align-items: center; }
       .bodyIndex .sectionV iframe {
         margin-bottom: 1rem; }
+    .bodyIndex .sectionR div p {
+      font-size: 16px; }
     .bodyIndex .sectionR .redes {
-      margin-top: 4rem;
+      margin-top: 2rem;
       text-align: center; }
       .bodyIndex .sectionR .redes h3 {
         font-size: 45px;
@@ -212,7 +226,7 @@
       .bodyIndex footer h4 {
         color: white;
         text-shadow: 1px 1px rgba(255, 0, 0, 0.219);
-        font-family: 'Roboto', sans-serif;
+        font-family: "Roboto", sans-serif;
         font-size: 10px; }
       .bodyIndex footer a {
         padding: 0.5rem;
@@ -359,7 +373,7 @@
     .bodyC footer h4 {
       color: white;
       text-shadow: 2px 2px rgba(255, 0, 0, 0.219);
-      font-family: 'Roboto', sans-serif;
+      font-family: "Roboto", sans-serif;
       font-size: 25px;
       padding-bottom: 1rem; }
     .bodyC footer div {
@@ -377,7 +391,7 @@
     .bodyC footer h5 {
       color: white;
       text-shadow: 2px 2px rgba(255, 0, 0, 0.219);
-      font-family: 'Roboto', sans-serif;
+      font-family: "Roboto", sans-serif;
       font-size: 15px;
       padding-bottom: 1rem; }
     .bodyC footer img {
@@ -520,7 +534,7 @@
       margin-top: 10px;
       background-color: rgba(0, 0, 0, 0.87);
       color: white;
-      font-family: 'Roboto', sans-serif;
+      font-family: "Roboto", sans-serif;
       margin-top: 20px;
       font-size: 20px;
       padding: 10px 100px 10px 100px;
@@ -547,7 +561,7 @@
     .bodySn footer h3 {
       color: white;
       text-shadow: 2px 2px rgba(255, 0, 0, 0.219);
-      font-family: 'Roboto', sans-serif;
+      font-family: "Roboto", sans-serif;
       font-size: 25px;
       padding-bottom: 1rem; }
     .bodySn footer div {
@@ -565,7 +579,7 @@
     .bodySn footer h4 {
       color: white;
       text-shadow: 2px 2px rgba(255, 0, 0, 0.219);
-      font-family: 'Roboto', sans-serif;
+      font-family: "Roboto", sans-serif;
       font-size: 15px;
       padding-bottom: 1rem; }
     .bodySn footer img {
@@ -609,7 +623,7 @@
       background-color: rgba(255, 0, 0, 0.219);
       color: white;
       text-shadow: 1px 1px black;
-      font-family: 'Roboto', sans-serif;
+      font-family: "Roboto", sans-serif;
       font-size: 20px;
       padding: 0.5rem 2rem 0.5rem 2rem;
       margin-bottom: 20px; }
@@ -710,7 +724,7 @@
     .bodyA footer h2 {
       color: white;
       text-shadow: 2px 2px rgba(255, 0, 0, 0.219);
-      font-family: 'Roboto', sans-serif;
+      font-family: "Roboto", sans-serif;
       font-size: 25px;
       padding-bottom: 1rem; }
     .bodyA footer div {
@@ -728,7 +742,7 @@
     .bodyA footer h3 {
       color: white;
       text-shadow: 2px 2px rgba(255, 0, 0, 0.219);
-      font-family: 'Roboto', sans-serif;
+      font-family: "Roboto", sans-serif;
       font-size: 15px;
       padding-bottom: 1rem; }
     .bodyA footer img {
@@ -860,7 +874,7 @@
       .bodyG main div p {
         padding: 1rem; }
         .bodyG main div p img {
-          width: 300px;
+          width: auto;
           height: 300px;
           padding: 0.2rem;
           background-color: rgba(255, 0, 0, 0.219);
@@ -882,7 +896,7 @@
     .bodyG footer h4 {
       color: white;
       text-shadow: 2px 2px rgba(255, 0, 0, 0.219);
-      font-family: 'Roboto', sans-serif;
+      font-family: "Roboto", sans-serif;
       font-size: 25px;
       padding-bottom: 1rem; }
     .bodyG footer div {
@@ -900,7 +914,7 @@
     .bodyG footer h5 {
       color: white;
       text-shadow: 2px 2px rgba(255, 0, 0, 0.219);
-      font-family: 'Roboto', sans-serif;
+      font-family: "Roboto", sans-serif;
       font-size: 15px;
       padding-bottom: 1rem; }
     .bodyG footer img {
