--- a/scss/utilities/_MQSobreNosotros.scss
+++ b/scss/utilities/_MQSobreNosotros.scss
@@ -51,7 +51,7 @@
                 background-color: $colorR;
                 color: white;
                 text-shadow: 1px 1px black;
-                font-family: 'Roboto', sans-serif;
+                font-family: $font2;
                 font-size: 20px;
                 padding: 0.5rem 2rem 0.5rem 2rem;
                 margin-bottom: 20px;
