--- a/scss/utilities/_MQIndex.scss
+++ b/scss/utilities/_MQIndex.scss
@@ -60,8 +60,13 @@
             }
         }
         .sectionR{
+            div{
+                p{
+                    font-size: 16px;
+                }
+            }
             .redes{
-                margin-top: 4rem;
+                margin-top: 2rem;
                 text-align: center;
                 h3{
                     font-size: 45px;
@@ -93,7 +98,7 @@
             h4{
                 color: white;
                 text-shadow: 1px 1px $colorR;
-                font-family: 'Roboto', sans-serif;
+                font-family: $font2;
                 font-size: 10px;
             }
             a{
