--- a/scss/utilities/_mixins.scss
+++ b/scss/utilities/_mixins.scss
@@ -5,3 +5,12 @@
     background-repeat: repeat; 
     display: grid;
 }
+
+@mixin titulo{
+    font-family: 'Bebas Neue', cursive;
+    color: white;
+    text-shadow: 3px 3px $colorN;
+    font-size: 35px;
+    text-align: center;
+    margin-top: -1rem;
+}
