--- a/scss/utilities/_variables.scss
+++ b/scss/utilities/_variables.scss
@@ -2,3 +2,5 @@ $colorN: rgba(0, 0, 0, 0.87);
 $colorR: rgba(255, 0, 0, 0.219);
 $font1: 'Anton', sans-serif;
 $font2: 'Roboto', sans-serif;
+$font3: 'Bebas Neue', cursive;
+$medPrincipal: 10px;
